--- a/TS/tsconfig.json
+++ b/TS/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compileOnSave": true,
     "compilerOptions": {
-        "target": "es5",
+        "target": "es5", // es2015
         "removeComments": true,
         "outDir": "js",
         "sourceMap": true,
+        "noEmitOnError": true,
         "outFile": "main.js"
     }
 }
