--- a/Тестовые задания/AngularTableGrafic/angular.json
+++ b/Тестовые задания/AngularTableGrafic/angular.json
@@ -33,6 +33,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ag-grid-community/styles/ag-theme-quartz.css",
               "src/styles.scss"
             ],
             "scripts": [
