--- a/Тестовые задания/AngularTableGrafic/package.json
+++ b/Тестовые задания/AngularTableGrafic/package.json
@@ -21,6 +21,7 @@
     "ag-grid-community": "^33.3.0",
     "bootstrap": "^5.3.6",
     "echarts": "^5.6.0",
+    "ngx-bootstrap": "^19.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
